Made the site logo not sit in img/ by default

--- a/htdocs/css/common.css
+++ b/htdocs/css/common.css
@@ -3,6 +3,10 @@ body {
     padding-bottom: 60px;
 }
 
+#site_logo {
+    width:500px;
+}
+
 /* Custom container */
 .container {
     margin: 0 auto;
