Now uses bootstrap 3. Site design in desperate need of attention

--- a/htdocs/css/mellivora.css
+++ b/htdocs/css/mellivora.css
@@ -1,13 +1,175 @@
 body {
     padding-top: 20px;
-    padding-bottom: 60px;
+}
+
+.container {
+    max-width: 1000px;
+}
+
+.footer {
+    border-top: 1px solid #eee;
+    margin-top: 40px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+/* Main marketing message and sign up button */
+.jumbotron {
+    text-align: center;
+    background-color: transparent;
+}
+.jumbotron .btn {
+    font-size: 21px;
+    padding: 14px 24px;
+}
+
+/* Customize the nav-justified links to be fill the entire space of the .navbar */
+
+.nav-justified {
+    background-color: #eee;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+}
+.nav-justified > li > a {
+    margin-bottom: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: #777;
+    font-weight: bold;
+    text-align: center;
+    border-bottom: 1px solid #d5d5d5;
+    background-color: #e5e5e5; /* Old browsers */
+    background-repeat: repeat-x; /* Repeat the gradient */
+    background-image: -moz-linear-gradient(top, #f5f5f5 0%, #e5e5e5 100%); /* FF3.6+ */
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f5f5f5), color-stop(100%,#e5e5e5)); /* Chrome,Safari4+ */
+    background-image: -webkit-linear-gradient(top, #f5f5f5 0%,#e5e5e5 100%); /* Chrome 10+,Safari 5.1+ */
+    background-image: -o-linear-gradient(top, #f5f5f5 0%,#e5e5e5 100%); /* Opera 11.10+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#e5e5e5',GradientType=0 ); /* IE6-9 */
+    background-image: linear-gradient(top, #f5f5f5 0%,#e5e5e5 100%); /* W3C */
+}
+.nav-justified > .active > a,
+.nav-justified > .active > a:hover,
+.nav-justified > .active > a:focus {
+    background-color: #ddd;
+    background-image: none;
+    box-shadow: inset 0 3px 7px rgba(0,0,0,.15);
+}
+.nav-justified > li:first-child > a {
+    border-radius: 5px 5px 0 0;
+}
+.nav-justified > li:last-child > a {
+    border-bottom: 0;
+    border-radius: 0 0 5px 5px;
+}
+
+@media (min-width: 768px) {
+    .nav-justified {
+        max-height: 52px;
+    }
+    .nav-justified > li > a {
+        border-left: 1px solid #fff;
+        border-right: 1px solid #d5d5d5;
+    }
+    .nav-justified > li:first-child > a {
+        border-left: 0;
+        border-radius: 5px 0 0 5px;
+    }
+    .nav-justified > li:last-child > a {
+        border-radius: 0 5px 5px 0;
+        border-right: 0;
+    }
+}
+
+/* Responsive: Portrait tablets and up */
+@media screen and (min-width: 768px) {
+    /* Remove the padding we set earlier */
+    .masthead,
+    .marketing,
+    .footer {
+        padding-left: 0;
+        padding-right: 0;
+    }
+}
+
+.form-signin {
+    max-width: 1000px;
+    padding: 15px;
+    margin: 0 auto;
+}
+.form-signin .form-signin-heading,
+.form-signin .checkbox {
+    margin-bottom: 10px;
+}
+.form-signin .checkbox {
+    font-weight: normal;
+}
+.form-signin .form-control {
+    position: relative;
+    font-size: 16px;
+    height: auto;
+    padding: 10px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+.form-signin .form-control:focus {
+    z-index: 2;
+}
+.form-signin input[type="text"] {
+    margin-bottom: -1px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+.form-signin input[type="password"] {
+    margin-bottom: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
 }
 
 #site_logo {
     width:20px;
 }
 
-/* Custom container */
+.challenge-container {
+    margin-bottom: 20px;
+}
+
+.challenge-container h1 {
+    font-size: 15pt;
+}
+
+.challenge-description {
+    background-color: #eeeeee;
+    border-radius: 6px;
+    padding: 10px;
+}
+
+.page-header {
+    padding-bottom: 0px;
+    margin: 10px 0 10px;
+    border-bottom: 1px solid #eeeeee;
+}
+
+.no_padding_or_margin {
+    padding:0;
+    margin:0;
+}
+
+.menu_management {
+    padding-top: 20px;
+}
+
+.alert h1 {
+    padding:0;
+    margin:0;
+}
+
+/*
+body {
+    padding-top: 20px;
+    padding-bottom: 60px;
+}
+
 .container {
     margin: 0 auto;
     max-width: 1000px;
@@ -16,7 +178,6 @@ body {
     margin: 60px 0;
 }
 
-/* Customize the navbar links to be fill the entire space of the .navbar */
 .navbar .navbar-inner {
     padding: 0;
 }
@@ -53,18 +214,4 @@ body {
     -moz-border-radius: 6px;
     border-radius: 6px;
 }
-
-.description {
-    margin-bottom: 10px;
-}
-
-.page-header {
-    padding-bottom: 0px;
-    margin: 10px 0 10px;
-    border-bottom: 1px solid #eeeeee;
-}
-
-.no_padding_or_margin {
-    padding:0;
-    margin:0;
-}
+*/
