Slightly better CSS

--- a/htdocs/css/mellivora.css
+++ b/htdocs/css/mellivora.css
@@ -116,12 +116,17 @@ body {
     z-index: 2;
 }
 .form-signin input[type="text"] {
-    margin-bottom: -1px;
+    margin-bottom: 5px;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
 }
 .form-signin input[type="password"] {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
+.form-signin select {
+    margin-bottom: 5px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
 }
