--- a/htdocs/css/mellivora.css
+++ b/htdocs/css/mellivora.css
@@ -6,6 +6,13 @@ body {
     max-width: 1000px;
 }
 
+.header h3 {
+    margin-top: 0;
+    margin-bottom: 0;
+    line-height: 40px;
+    padding-bottom: 19px;
+}
+
 .footer {
     border-top: 1px solid #eee;
     margin-top: 40px;
@@ -21,45 +28,6 @@ body {
 .jumbotron .btn {
     font-size: 21px;
     padding: 14px 24px;
-}
-
-/* Customize the nav-justified links to be fill the entire space of the .navbar */
-
-.nav-justified {
-    background-color: #eee;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-}
-.nav-justified > li > a {
-    margin-bottom: 0;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    color: #777;
-    font-weight: bold;
-    text-align: center;
-    border-bottom: 1px solid #d5d5d5;
-    background-color: #e5e5e5; /* Old browsers */
-    background-repeat: repeat-x; /* Repeat the gradient */
-    background-image: -moz-linear-gradient(top, #f5f5f5 0%, #e5e5e5 100%); /* FF3.6+ */
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f5f5f5), color-stop(100%,#e5e5e5)); /* Chrome,Safari4+ */
-    background-image: -webkit-linear-gradient(top, #f5f5f5 0%,#e5e5e5 100%); /* Chrome 10+,Safari 5.1+ */
-    background-image: -o-linear-gradient(top, #f5f5f5 0%,#e5e5e5 100%); /* Opera 11.10+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#e5e5e5',GradientType=0 ); /* IE6-9 */
-    background-image: linear-gradient(top, #f5f5f5 0%,#e5e5e5 100%); /* W3C */
-}
-.nav-justified > .active > a,
-.nav-justified > .active > a:hover,
-.nav-justified > .active > a:focus {
-    background-color: #ddd;
-    background-image: none;
-    box-shadow: inset 0 3px 7px rgba(0,0,0,.15);
-}
-.nav-justified > li:first-child > a {
-    border-radius: 5px 5px 0 0;
-}
-.nav-justified > li:last-child > a {
-    border-bottom: 0;
-    border-radius: 0 0 5px 5px;
 }
 
 @media (min-width: 768px) {
@@ -93,7 +61,7 @@ body {
 
 .form-signin {
     max-width: 1000px;
-    padding: 15px;
+    padding: 0 15px 15px 15px;
     margin: 0 auto;
 }
 .form-signin .form-signin-heading,
@@ -150,7 +118,7 @@ body {
 }
 
 .page-header {
-    padding-bottom: 0px;
+    padding-bottom: 5px;
     margin: 10px 0 10px;
     border-bottom: 1px solid #eeeeee;
 }
@@ -168,55 +136,3 @@ body {
     padding:0;
     margin:0;
 }
-
-/*
-body {
-    padding-top: 20px;
-    padding-bottom: 60px;
-}
-
-.container {
-    margin: 0 auto;
-    max-width: 1000px;
-}
-.container > hr {
-    margin: 60px 0;
-}
-
-.navbar .navbar-inner {
-    padding: 0;
-}
-.navbar .nav {
-    margin: 0;
-    display: table;
-    width: 100%;
-}
-.navbar .nav li {
-    display: table-cell;
-    width: 1%;
-    float: none;
-}
-.navbar .nav li a {
-    font-weight: bold;
-    text-align: center;
-    border-left: 1px solid rgba(255,255,255,.75);
-    border-right: 1px solid rgba(0,0,0,.1);
-}
-.navbar .nav li:first-child a {
-    border-left: 0;
-    border-radius: 3px 0 0 3px;
-}
-.navbar .nav li:last-child a {
-    border-right: 0;
-    border-radius: 0 3px 3px 0;
-}
-
-.antihero-unit {
-    padding: 5px 20px 10px 20px;
-    margin-bottom: 10px;
-    background-color: #eeeeee;
-    -webkit-border-radius: 6px;
-    -moz-border-radius: 6px;
-    border-radius: 6px;
-}
-*/
