Minor improvements and rewordings

--- a/htdocs/css/mellivora.css
+++ b/htdocs/css/mellivora.css
@@ -87,6 +87,11 @@ body {
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
 }
+.form-signin input[type="email"] {
+    margin-bottom: 5px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
 .form-signin input[type="password"] {
     margin-bottom: 5px;
     border-top-left-radius: 0;
