--- a/htdocs/css/header.css
+++ b/htdocs/css/header.css
@@ -8,17 +8,25 @@
     text-align: center;
 }
 
-.header-inner {
+#header-inner {
     max-width: 1000px;
     overflow: auto;
     margin-left: auto;
     margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
-.header-logo {
+#header-logo {
     float: left;
 }
 
-.header-menu {
+#header-menu {
     float: right;
+}
+
+@media (max-width: 800px) {
+    #header-logo {
+        display: none;
+    }
 }
