--- a/htdocs/css/mellivora.css
+++ b/htdocs/css/mellivora.css
@@ -135,9 +135,15 @@ body {
 }
 
 .challenge-description {
-    background-color: #eeeeee;
-    border-radius: 6px;
+    
     padding: 10px;
+    margin-bottom: 10px;
+}
+
+.challenge-attachment {
+    display: inline-block;
+    padding-right: 10px;
+    padding-left: 5px;
 }
 
 #header a {
