--- a/htdocs/css/mellivora.css
+++ b/htdocs/css/mellivora.css
@@ -187,3 +187,11 @@ body {
     width: 16px;
     height: 16px;
 }
+
+.bbcode_columns {
+    width: 100%;
+}
+
+.bbcode_column {
+    padding: 10px;
+}
