--- a/htdocs/css/mellivora.css
+++ b/htdocs/css/mellivora.css
@@ -18,17 +18,30 @@ body {
     padding: 10px 65px 10px 65px;
 }
 
+#footer {
+    background-color: #f8f8f8;
+    font-size: 10px;
+    border-top: 4px solid rgba(234, 234, 234, 1);
+    text-align: center;
+    padding: 10px 65px 10px 65px;
+}
 
-.footer {
-    margin-top: 10px;
-    padding-top: 40px;
-    padding-bottom: 40px;
+#footer p {
+    padding: 0;
+    margin: 0;
+}
+
+#footer .fade {
+    opacity: 0.20;
+}
+
+#footer .fade:hover {
+    opacity: 1;
 }
 
 /**
     Header / nav bar
 **/
-
 
 #header a {
     text-decoration: none;
@@ -128,6 +141,15 @@ body {
 #site-logo object {
     width: 36px;
     height: 36px;
+}
+
+#footer-logo {
+    display: inline-block;
+}
+
+#footer-logo object {
+    width: 24px;
+    height: 24px;
 }
 
 #site-logo-text {
