--- a/htdocs/css/mellivora.css
+++ b/htdocs/css/mellivora.css
@@ -81,18 +81,27 @@ body {
     color: #ffffff;
 }
 
-#menu-main :not(.active) a:hover {
+#menu-main :not(.active) a:hover, form:hover {
     background-color: rgba(234, 234, 234, 0.75);
 }
 
-#menu-main a {
+#menu-main a, form {
     padding: 7px 15px;
     margin: 5px 5px;
+    border-radius: 4px;
+}
+
+#menu-main input {
+    background: none;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    color: #428BCA;
 }
 
 #categories-menu a {
     display: block;
-    box-model: border-box;
     text-decoration: none;
     padding: 5px 5px;
 }
