--- a/htdocs/css/mellivora.css
+++ b/htdocs/css/mellivora.css
@@ -91,7 +91,7 @@ body {
     border-radius: 4px;
 }
 
-#menu-main input {
+#menu-main button {
     background: none;
     border: none;
     padding: 0;
