Some nicer BBCode parsing and CSS

--- a/htdocs/css/mellivora.css
+++ b/htdocs/css/mellivora.css
@@ -334,6 +334,11 @@ body {
     height: 16px;
 }
 
+.bbcode_spoiler {
+    color: black;
+    background-color: black;
+}
+
 .bbcode_columns {
     width: 100%;
 }
